working examples with visual cues

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,17 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Homepage
+
+  .info
+    |Everyone should be able to see this page
+
+  ul
+    li 
+      a(href="/users/dante/profile") dante's public profile
+    li
+      a(href="/users/amara/profile") amara's public profile
+    li
+      a(href="/users/monica/profile") monica's public profile
+    li
+      a(href="/users/jules/profile") jules's public profile
