--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,25 @@ body {
 a {
   color: #00B7FF;
 }
+
+.warning {
+  border: 3px solid red;
+  background: pink;
+  padding: 2em;
+  font-size: 120%;
+  font-weight: bold;
+}
+
+.warning.user {
+  border-color: maroon;
+  background-color: orange;
+  color: white;
+}
+
+.info {
+  border: 3px solid blue;
+  background: skyblue;
+  padding: 2em;
+  font-size: 120%;
+  font-weight: bold;
+}
